--- a/UnitTestProject/UnitTestProject.csproj
+++ b/UnitTestProject/UnitTestProject.csproj
@@ -144,8 +144,8 @@
     <PackageReference Include="FirebaseStorage.net">
       <Version>1.0.3</Version>
     </PackageReference>
-    <PackageReference Include="Google.Cloud.Firestore">
-      <Version>1.1.0</Version>
+    <PackageReference Include="Google.Apis.Firestore.v1">
+      <Version>1.45.0.1896</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Bcl.HashCode">
       <Version>1.1.0</Version>
