--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,5 @@ API_KEY.txt
 /SimpleWeather/Keys/TimeZoneAPI.cs.bak
 /Utf8Json.UniversalCodeGenerator
 /GenerateUtf8JsonResolvers.bat
+/TranslationImport
+/ImportTranslations.bat
