--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -277,6 +277,7 @@
       <DependentUpon>ForecastGraphPanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ForecastGraphViewModel.cs" />
+    <Compile Include="Controls\GraphItemViewModel.cs" />
     <Compile Include="Controls\MoonPhaseControl.xaml.cs">
       <DependentUpon>MoonPhaseControl.xaml</DependentUpon>
     </Compile>
