--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -337,6 +337,12 @@
     <Compile Include="Preferences\Settings_Features.xaml.cs">
       <DependentUpon>Settings_Features.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Radar\EarthWindMapViewProvider.cs" />
+    <Compile Include="Radar\MapTileRadarViewProvider.cs" />
+    <Compile Include="Radar\OWMRadarViewProvider.cs" />
+    <Compile Include="Radar\RadarProvider.cs" />
+    <Compile Include="Radar\RadarViewProvider.cs" />
+    <Compile Include="Radar\RainViewerViewProvider.cs" />
     <Compile Include="Tiles\SecondaryTileUtils.cs" />
     <Compile Include="Helpers\StringBooleanConverter.cs" />
     <Compile Include="Helpers\IPageVerification.cs" />
