LocationProviders: add support for WeatherApiLocationProvider

--- a/.gitignore
+++ b/.gitignore
@@ -260,6 +260,7 @@ API_KEY.txt
 /SimpleWeather/Keys/AQICNKey.cs
 /SimpleWeather/Keys/FirebaseConfig.cs
 /SimpleWeather/Keys/TimeZoneAPI.cs
+/SimpleWeather/Keys/WeatherApiKey.cs
 /SimpleWeather/Keys/YahooKey.cs.bak
 /SimpleWeather/Keys/OWMKey.cs.bak
 /SimpleWeather/Keys/HEREWeatherKey.cs.bak
@@ -268,6 +269,7 @@ API_KEY.txt
 /SimpleWeather/Keys/AQICNKey.cs.bak
 /SimpleWeather/Keys/FirebaseConfig.cs.bak
 /SimpleWeather/Keys/TimeZoneAPI.cs.bak
+/SimpleWeather/Keys/WeatherApiKey.cs.bak
 /Utf8Json.UniversalCodeGenerator
 /GenerateUtf8JsonResolvers.bat
 /TranslationImport
