SimpleWeather: add RemoteConfig support for weather providers
* Allow enabling weather providers remotely without pushing an update
* This allows us to disable weather providers remotely or switch users to one that is working

--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -261,6 +261,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="BackgroundTasks\AppUpdaterTask.cs" />
+    <Compile Include="BackgroundTasks\RemoteConfigUpdateTask.cs" />
     <Compile Include="BackgroundTasks\ImageDatabaseTask.cs" />
     <Compile Include="BackgroundTasks\UpdateTask.cs" />
     <Compile Include="BackgroundTasks\WNSPushBackgroundTask.cs" />
