WeatherIcons: add WeatherUnderground icons support
* Source: https://github.com/manifestinteractive/weather-underground-icons

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -348,6 +348,25 @@
     <Content Include="Assets\Providers\waqi.png" />
     <Content Include="Assets\Providers\yahoo.png" />
     <Content Include="Assets\Providers\yahoo_dark.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-chanceflurries.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-chancerain.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-chancesleet.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-chancesnow.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-chancetstorms.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-clear.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-cloudy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-flurries.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-fog.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-mostlycloudy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-nt_clear.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-nt_mostlycloudy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-nt_partlycloudy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-partlycloudy.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-sleet.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-tstorms.png" />
+    <Content Include="Assets\WeatherIcons\dark\wui-unknown.png" />
     <Content Include="Assets\WeatherIcons\light\ic_error.png" />
     <Content Include="Assets\WeatherIcons\light\wi-barometer.png" />
     <Content Include="Assets\WeatherIcons\light\wi-celsius.png" />
@@ -477,6 +496,25 @@
     <Content Include="Assets\WeatherIcons\light\wi-wind-beaufort-9.png" />
     <Content Include="Assets\WeatherIcons\light\wi-wind-direction.png" />
     <Content Include="Assets\WeatherIcons\light\wi-windy.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-chanceflurries.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-chancerain.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-chancesleet.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-chancesnow.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-chancetstorms.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-clear.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-cloudy.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-flurries.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-fog.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-mostlycloudy.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-nt_clear.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-nt_mostlycloudy.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-nt_partlycloudy.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-partlycloudy.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-rain.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-sleet.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-snow.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-tstorms.png" />
+    <Content Include="Assets\WeatherIcons\light\wui-unknown.png" />
     <None Include="Keys\AppCenterKey.cs.bak" />
     <None Include="Keys\AQICNKey.cs.bak" />
     <None Include="Keys\BingMapsKey.cs.bak" />
