WeatherIcons: add weather iconic icons

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -348,6 +348,51 @@
     <Content Include="Assets\Providers\waqi.png" />
     <Content Include="Assets\Providers\yahoo.png" />
     <Content Include="Assets\Providers\yahoo_dark.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-barometer.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-celsius.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-cloud-fog.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-cloud-rain-single.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-cloud-rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-cloud-snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-cloud-wind.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-cloud.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-clouds.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-compass.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-fahrenheit.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-fog.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-hail.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-lightning.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-cloud-lightning.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-cloud-rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-cloud-snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-cloud-wind.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-cloud.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-first-quarter.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-fog.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-fullmoon.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-last-quarter.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-newmoon.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-waning-crescent.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-waning-gibbous.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-waxing-crescent.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon-waxing-gibbous.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-moon.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-raindrop.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-snowflake.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sun-cloud-lightning.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sun-cloud-rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sun-cloud-snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sun-cloud-wind.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sun-cloud.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sun-fog.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sun.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sunrise.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-sunset.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-thermometer-medium.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-tornado.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-umbrella.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-wind-high.png" />
+    <Content Include="Assets\WeatherIcons\dark\wic-wind.png" />
     <Content Include="Assets\WeatherIcons\dark\wui-chanceflurries.png" />
     <Content Include="Assets\WeatherIcons\dark\wui-chancerain.png" />
     <Content Include="Assets\WeatherIcons\dark\wui-chancesleet.png" />
@@ -496,6 +541,51 @@
     <Content Include="Assets\WeatherIcons\light\wi-wind-beaufort-9.png" />
     <Content Include="Assets\WeatherIcons\light\wi-wind-direction.png" />
     <Content Include="Assets\WeatherIcons\light\wi-windy.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-barometer.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-celsius.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-cloud-fog.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-cloud-rain-single.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-cloud-rain.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-cloud-snow.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-cloud-wind.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-cloud.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-clouds.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-compass.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-fahrenheit.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-fog.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-hail.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-lightning.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-cloud-lightning.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-cloud-rain.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-cloud-snow.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-cloud-wind.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-cloud.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-first-quarter.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-fog.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-fullmoon.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-last-quarter.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-newmoon.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-waning-crescent.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-waning-gibbous.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-waxing-crescent.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon-waxing-gibbous.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-moon.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-raindrop.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-snowflake.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sun-cloud-lightning.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sun-cloud-rain.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sun-cloud-snow.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sun-cloud-wind.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sun-cloud.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sun-fog.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sun.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sunrise.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-sunset.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-thermometer-medium.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-tornado.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-umbrella.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-wind-high.png" />
+    <Content Include="Assets\WeatherIcons\light\wic-wind.png" />
     <Content Include="Assets\WeatherIcons\light\wui-chanceflurries.png" />
     <Content Include="Assets\WeatherIcons\light\wui-chancerain.png" />
     <Content Include="Assets\WeatherIcons\light\wui-chancesleet.png" />
