WeatherIcons: add Meteocons icons support
* Source: https://github.com/basmilius/weather-icons/

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -348,6 +348,36 @@
     <Content Include="Assets\Providers\waqi.png" />
     <Content Include="Assets\Providers\yahoo.png" />
     <Content Include="Assets\Providers\yahoo_dark.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-clear-day.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-clear-night.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-cloudy.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-compass.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-drizzle.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-droplet.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-hail.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-mist.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-overcast.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-day-drizzle.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-day-hail.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-day-rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-day-snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-day.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-night-drizzle.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-night-hail.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-night-rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-night-snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-partly-cloudy-night.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-rain.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-snow.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-snowflake.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-sunrise.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-sunset.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-thermometer.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-thunderstorms-day.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-thunderstorms-night.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-thunderstorms.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-tornado.png" />
+    <Content Include="Assets\WeatherIcons\dark\mc-wind.png" />
     <Content Include="Assets\WeatherIcons\dark\pe-is-w-blizzard.png" />
     <Content Include="Assets\WeatherIcons\dark\pe-is-w-celsius.png" />
     <Content Include="Assets\WeatherIcons\dark\pe-is-w-cloud-wind.png" />
@@ -478,6 +508,36 @@
     <Content Include="Assets\WeatherIcons\dark\wui-tstorms.png" />
     <Content Include="Assets\WeatherIcons\dark\wui-unknown.png" />
     <Content Include="Assets\WeatherIcons\light\ic_error.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-clear-day.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-clear-night.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-cloudy.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-compass.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-drizzle.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-droplet.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-hail.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-mist.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-overcast.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-day-drizzle.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-day-hail.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-day-rain.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-day-snow.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-day.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-night-drizzle.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-night-hail.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-night-rain.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-night-snow.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-partly-cloudy-night.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-rain.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-snow.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-snowflake.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-sunrise.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-sunset.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-thermometer.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-thunderstorms-day.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-thunderstorms-night.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-thunderstorms.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-tornado.png" />
+    <Content Include="Assets\WeatherIcons\light\mc-wind.png" />
     <Content Include="Assets\WeatherIcons\light\pe-is-w-blizzard.png" />
     <Content Include="Assets\WeatherIcons\light\pe-is-w-celsius.png" />
     <Content Include="Assets\WeatherIcons\light\pe-is-w-cloud-wind.png" />
